# pt

./: Cargo.toml  LICENSE-MIT  del.py  pyproject.toml  test.py
.github/workflows/: CI.yml
ptst/: __init__.py
src/: main.rs  normalizer.rs
test/: test.py
