[package]
name = "pt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
ruff_python_parser = { path = "../ruff/crates/ruff_python_parser" }
ruff_python_ast = { path = "../ruff/crates/ruff_python_ast" }
ruff_python_trivia = { path = "../ruff/crates/ruff_python_trivia" }
ruff_source_file = { path = "../ruff/crates/ruff_source_file" }
ruff_python_codegen = { path = "../ruff/crates/ruff_python_codegen" }
itertools = "0.13.0"
